Sigil 0.7.0 TBD
    - Implement issue 1963: Table Of Contents window should default to expanded when opened or refreshed.
    - Implement issue 1953: Allow entering a list of new words into dictionary preferences.
    - Implement issue 1952: Add shortcut for Copy HTML file.
    - Implement issue 1951: Doubleclick on Image Report file should find next use of image.
    - Implement issue 1949: Add support for multiple active user dictionaries.
    - Implement issue 1947: Spellcheck dialog to manage all misspelled words at once.
    - Implement issue 62: Add document's css styles to menu.
    - Implement issue 1945: Allow editing of CSS while displaying page.
    - Implement issue 1661: Report list of all different characters in the book.
    - Implement issue 1746: Add Report for Links and Footnotes.
    - Implement issue 1941: Add Find & Replace option to wrap or not wrap searches.
    - Implement issue 1940: Update Insert Image to Insert File to support insert of audio/video.
    - Implement issue 1938: Update Delete Image files to Delete Media files to include audio/video.
    - Implement issue 1937: Add Report for All Files.
    - Implement issue 1936: Add Clip Bar toolbar with buttons for Clips and shortcuts for Clips.
    - Implement issue 1931: Change to QRegularExpression for most regexes.
    - Implement issue 1185: Edit Table of Contents without needing Generate TOC.
    - Implement issue 1929: Add support for playing audio and video files.
    - Implement issue 917: Sigil should support audio and video tags.
    - Implement issue 1928: Add well-formed check to HTML File Report.
    - Implement issue 1864: Allow Metadata Editor dialog to stay open while editing.
    - Implement issue 1871: Code View context menu should show clips even if word is misspelled.
    - Implement issue 1870: Saved Searches should use mode settings from Find & Replace.
    - Implement issue 1927: Add support for basic replacement Clips (e.g. span) in Book View.